--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,17 @@ height: 35px;
     transform: translate{0};
   }
 }
+@keyframes moveInBottom{
+  0% {
+    opacity: 0;
+    transform: translateY(30%);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translate{0};
+  }
+}
 
 .btn:link,
 .btn:visited{
@@ -112,6 +123,7 @@ height: 35px;
   display: inline-block;
   border-radius: 100px;
   transition: all .2s;
+  position: relative;
 }
 .btn:hover{
   transform: translateY(-3px);
@@ -125,6 +137,32 @@ height: 35px;
 .btn-white{
   background-color: #fff;
   color: #777;
+}
+
+.btn::after{
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+.btn-white::after{
+  background-color: #fff;
+
+}
+.btn:hover::after{
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+
+}
+.btn-animated{
+  animation: moveInBottom .5s ease-out ;
+  animation-fill-mode: backwards;
 }
 
 
