--- a/css/style.css
+++ b/css/style.css
@@ -6,40 +6,48 @@ Medium green: #55c57a
 Dark Green : #28b485
 */
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
-  font-family: "Lato" , sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  /* font-size: 16px; */
   /* line-height: 1.7px; */
   color: #777;
-  padding: 30px;
+  padding: 3rem;
+  box-sizing: border-box;
 }
 
-.header{
+.header {
   height: 95vh;
-  background-image:linear-gradient(to right bottom, rgba(126, 213, 111, 0.8),rgba(40, 180, 133, 0.8)) , url("../img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, .8)), url("../img/hero.jpg");
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   position: relative;
 }
 
-.logo-box{
+.logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
-}
-.logo{
-height: 35px;
+  top: 4rem;
+  left: 4rem;
 }
 
-.text-box{
+.logo {
+  height: 3.5rem;
+}
+
+.text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -47,146 +55,132 @@ height: 35px;
   text-align: center;
 }
 
-.heading-primary{
+.heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
-.heading-primary-main{
+
+.heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
-  margin-bottom: 15px;;
+  letter-spacing: 3.5rem;
+  margin-bottom: 1.5rem;
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out;
   /* animation-iteration-count: 3; */
   /* animation-delay: 3s; */
 }
-.heading-primary-sub{
-  display: block;
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 17.4px;
-  animation: moveInRight 1s ease-out;
 
+.heading-primary-sub {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 1.74rem;
+  animation: moveInRight 1s ease-out;
 }
 
-@keyframes moveInLeft{
+@keyframes moveInLeft {
   0% {
     opacity: 0;
     transform: translateX(100%);
   }
-  80%{
-    transform: translateX(-10px);
+  80% {
+    transform: translateX(-1rem);
   }
-
-  100%{
+  100% {
     opacity: 1;
-    transform: translate{0};
+    transform: translate {
+      0
+    }
+    ;
   }
 }
 
-@keyframes moveInRight{
+@keyframes moveInRight {
   0% {
     opacity: 0;
     transform: translateX(-100%);
   }
-  80%{
-    transform: translateX(10px);
+  80% {
+    transform: translateX(1rem);
   }
-
-  100%{
+  100% {
     opacity: 1;
-    transform: translate{0};
+    transform: translate {
+      0
+    }
+    ;
   }
 }
-@keyframes moveInBottom{
+
+@keyframes moveInBottom {
   0% {
     opacity: 0;
     transform: translateY(30%);
   }
-
-  100%{
+  100% {
     opacity: 1;
-    transform: translate{0};
+    transform: translate {
+      0
+    }
+    ;
   }
 }
 
 .btn:link,
-.btn:visited{
+.btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all .2s;
   position: relative;
-}
-.btn:hover{
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0,0,0,.2);
+  font-size: 1.6rem;
 }
 
-.btn:active{
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0,0,0,.2)
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
 }
-.btn-white{
+
+.btn:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .2)
+}
+
+.btn-white {
   background-color: #fff;
   color: #777;
 }
 
-.btn::after{
+.btn::after {
   content: '';
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
   transition: all .4s;
 }
-.btn-white::after{
-  background-color: #fff;
 
+.btn-white::after {
+  background-color: #fff;
 }
-.btn:hover::after{
+
+.btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
   opacity: 0;
-
 }
-.btn-animated{
-  animation: moveInBottom .5s ease-out ;
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out;
   animation-fill-mode: backwards;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
