--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,10 +7,9 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "pages/home";
-
 @import "components/buttons";
-
+@import "layout/grid";
 @import "layout/header";
+@import "pages/home";
 
 
