--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,9 @@
 
 @import "components/buttons";
 @import "components/composition";
+@import "components/feature-box";
+
+
 @import "layout/grid";
 @import "layout/header";
 @import "pages/home";
