Building the Tours Section - Part 3

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -12,18 +12,36 @@
   }
 
   &:hover {
-    transform: translateY(-0.3rem);
+    transform: translateY(-3px);
     box-shadow: 0 1rem 2rem rgba($color-black, .2);
+
+    &::after{
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
   }
 
   &:active {
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba($color-black, .2)
+    transform: translateY(-1px);
+    box-shadow: 0 .5rem 1rem rgba($color-black, .2)
   }
 
   &--white {
     background-color: $color-white;
     color: $color-grey-dark;
+
+    &::after{
+      background-color: $color-white;
+    }
+  }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+    
+    &::after{
+      background-color: $color-primary;
+    }
   }
 
 
@@ -39,15 +57,6 @@
     left: 0;
     z-index: -1;
     transition: all .4s;
-  }
-
-  &--white::after {
-    background-color: $color-white;
-  }
-
-  &:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
   }
 
   &--animated {
