--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,8 +4,7 @@ body {
   /* font-size: 16px; */
   /* line-height: 1.7px; */
   color: $color-grey-dark;
-  padding: 3rem;
-  box-sizing: border-box;
+ 
 }
 
 .heading-primary{
@@ -25,6 +24,11 @@ body {
     animation-timing-function: ease-out;
     /* animation-iteration-count: 3; */
     /* animation-delay: 3s; */
+
+    @include respond(phone){ 
+      letter-spacing: 1rem;
+      font-size: 5rem; 
+    }
   }
 
   &--sub {
@@ -33,6 +37,10 @@ body {
     font-weight: 700;
     letter-spacing: 1.74rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone){ 
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -46,6 +54,14 @@ body {
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s;
+
+  @include respond(tab-port){
+    font-size: 3rem;
+  }
+  @include respond(phone){
+    font-size: 2.5rem;
+  }
+
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: .5rem 1rem 2rem egba($color-black, .2);
