--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,8 +6,10 @@
     
     top: 0;
     left: 0;
-    z-index: 4000;
-    
+    z-index: 99999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
 
     &__content {
         @include absCenter;
@@ -18,6 +20,9 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(.5);
+        transition: all .4s .2s;
 
     }
 
@@ -52,7 +57,33 @@
 
        -webkit-hyphens: auto;
         -ms-hyphens: auto;
-        -moz-hyphens: auto
+        -moz-hyphens: auto;
         hyphens: auto;
     }
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    &__close{
+        &:link,
+        &:visited {
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all .2s;
+            font-size: 2rem;
+            line-height: 1;
+        }
+        &:hover {
+            color: $color-primary;
+        }
+    }
+
 }
