--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,9 +7,15 @@
   url("../img/hero.jpg");
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+  @include respond(phone){
+     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%)!important;
+     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%)!important;
+  }
+  
   &__logo-box {
     position: absolute;
     top: 4rem;
